# hakkit

./: .gitignore  Cargo.toml  README.md
examples/: program.rs
specification/: bfttf.md  bntx.md  hfs0.md  nacp.md  nca.md  ncz.md  npdm.md  pfs0.md  romfs.md  sarc.md  xci.md
src/: error.rs  keys.rs  lib.rs  utils.rs
src/compression/: lz4.rs  mod.rs  zstd.rs
src/crypto/: mod.rs  nca.rs
src/formats/: bfttf.rs  bntx.rs  hfs0.rs  mod.rs  nacp.rs  nca.rs  ncz.rs  npdm.rs  pfs0.rs  romfs.rs  sarc.rs  xci.rs
